pod-service-articles.yaml
apiVersion: v1
kind: Pod
metadata:
  name: articles-api-pod
  labels:
    name: articles-api-pod
    app: CDA-micro-services
spec:
  containers:
    - name: articles-api
      image: CDA-eval/articles-service:latest
      ports:
        - containerPort: 80
