service-service-articles.yaml
apiVersion: v1
kind: Service
metadata:
  name: articles-service
  labels:
    name: articles-service
    app: CDA-micro-services
spec:
  type: LoadBalancer
  ports: 
    - port: 80
      targetPort: 80
  selector: 
    name: articles-api-pod
    app: CDA-micro-services
