service-service-categorie.yaml
apiVersion: v1
kind: Service
metadata:
  name: categorie-service
  labels:
    name: categorie-service
    app: CDA-micro-services
spec:
  type: LoadBalancer
  ports: 
    - port: 80
      targetPort: 80
  selector: 
    name: categorie-api-pod
    app: CDA-micro-services
