service-service-users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    name: users-service
    app: CDA-micro-services
spec:
  type: LoadBalancer
  ports: 
    - port: 80
      targetPort: 80
  selector: 
    name: users-api-pod
    app: CDA-micro-services
