ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: cda.tr
    http:
      paths:
      - path: /articles
        pathType: Prefix
        backend:
          service:
            name: service-articles-clstp
            port:
              number: 80
      - path: /categories
        pathType: Prefix
        backend:
          service:
            name: service-categories-clstp
            port:
              number: 80
